subprojects {
    apply plugin: 'java'
    repositories {
        mavenCentral()
    }
    ext {
        springVersion = '5.2.7.RELEASE'
    }


    test {
        useJUnitPlatform()
        testLogging {
            events "passed", "skipped", "failed"
        }
    }

    dependencies {
        implementation 'com.google.guava:guava:29.0-jre'
        implementation 'javax.annotation:javax.annotation-api:1.3.2'
        implementation 'org.apache.logging.log4j:log4j-api:2.13.3'
        implementation 'org.apache.logging.log4j:log4j-core:2.13.3'
        implementation 'org.slf4j:slf4j-simple:1.7.30'
        testImplementation 'org.hamcrest:hamcrest-library:2.2'
        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.6.2'
        testImplementation 'org.mockito:mockito-core:3.3.3'
        testImplementation 'org.mockito:mockito-junit-jupiter:3.3.3'
    }
    sourceCompatibility = 1.8
    targetCompatibility = 1.8

    javadoc {
        source = sourceSets.main.allJava
    }

}

allprojects {
    group 'by.epam.pavelshakhlovich'
    version '1.0-SNAPSHOT'
}
